agregando active para Player, Team e Infraction Type. Inactivos son listados para usuarios administradores unicamente en listaods, no en dropdowns

--- a/app/views/infraction_types/_form.html.erb
+++ b/app/views/infraction_types/_form.html.erb
@@ -16,6 +16,10 @@
     <%= f.text_field :name %>
   </div>
   <div class="field">
+      <%= f.label :active %><br />
+      <%= f.check_box :active %>
+    </div>
+  <div class="field">
     <%= f.label :points %><br />
     <%= f.text_field :points %>
   </div>
