--- a/app/views/infraction_types/show.html.erb
+++ b/app/views/infraction_types/show.html.erb
@@ -4,6 +4,12 @@
 </p>
 
 <p>
+  <b>Active:</b>
+  <%= @infraction_type.active %>
+</p>
+
+
+<p>
   <b>Points:</b>
   <%= @infraction_type.points %>
 </p>
