--- a/app/views/players/_form.html.erb
+++ b/app/views/players/_form.html.erb
@@ -33,11 +33,16 @@
       <%= f.check_box :is_admin %>
     </div>
     <div class="field">
-      <%= f.label :avatar %><br />
-      <%= f.file_field :avatar %>
-    </div>
-    <div class="actions">
-      <%= f.submit %>
+      <%= f.label :active %><br />
+      <%= f.check_box :active %>
     </div>
   <% end %>
+  <div class="field">
+    <%= f.label :avatar %><br />
+    <%= f.file_field :avatar %>
+  </div>
+  <div class="actions">
+    <%= f.submit %>
+  </div>
+  
 <% end %>
