--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -17,6 +17,10 @@
   </div>
   <% if can? :manage, @team %>
     <div class="field">
+      <%= f.label :active %><br />
+      <%= f.check_box :active %>
+    </div>
+    <div class="field">
       <%= f.label :code %><br />
       <%= f.text_field :code %>
     </div>
