--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -7,6 +7,7 @@
     <th>Score</th>
     <% if can? :manage, Team %>
       <th>Code</th>
+      <th>Active?</th>
       <th></th>
     <% end %>
     <% if can? :update, Team %>
@@ -21,6 +22,7 @@
     <td><%= team.score %></td>
     <% if can? :manage, team %>
       <td><%= team.code %></td>
+      <td><%= team.active %></td>
     <% end %>
     <% if can? :update, team %>
       <td><%= link_to 'Edit', edit_team_path(team) %></td>
@@ -36,4 +38,29 @@
 
 <% if can? :create, Team %>
   <%= link_to 'New Team', new_team_path %>
+<% end %>
+
+<% if can? :manage, Team %>
+  <h1>Inactive teams</h1>
+  <table>
+    <tr>
+      <th></th>
+      <th>Name</th>
+      <th>Code</th>
+      <th>Active?</th>
+      <th></th>
+      <th></th>
+    </tr>
+
+  <% @inactive_teams.each do |team| %>
+    <tr>
+      <td><%= link_to image_tag(team.team_logo.url(:thumb)), team %></td>
+      <td><%= link_to team.name, team %></td>
+      <td><%= team.code %></td>
+      <td><%= team.active %></td>
+      <td><%= link_to 'Edit', edit_team_path(team) %></td>
+      <td><%= link_to 'Destroy', team, :confirm => 'Are you sure?', :method => :delete %></td>
+    </tr>
+  <% end %>
+  </table>
 <% end %>
