--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -4,4 +4,6 @@
 
 <br />
 
-<%= link_to 'New Player', new_player_path %>
+<% unless user_signed_in? %>
+  <%= link_to 'New Player', new_user_registration_path %>
+<% end %>
