--- a/app/views/players/_form.html.erb
+++ b/app/views/players/_form.html.erb
@@ -19,11 +19,8 @@
     <%= f.label :last_names %><br />
     <%= f.text_field :last_names %>
   </div>
+  <%= f.hidden_field :user_id %>
   <% if can? :manage, @player %>
-    <div class="field">
-      <%= f.label :user_id %><br />
-      <%= f.collection_select(:user_id, User.all, :id, :email) %>
-    </div>
     <div class="field">
       <%= f.label :team_id %><br />
       <%= teams_select(:player) %>
