--- a/app/views/infractions/index.html.erb
+++ b/app/views/infractions/index.html.erb
@@ -24,8 +24,8 @@
     <td><%= infraction.infraction_type %></td>
     <td><%= infraction.status %></td>
     <td><%= infraction.description %></td>
-    <td><%= link_to 'Comments', infraction_comments_path(infraction) %></td>
-    <td><%= link_to 'Witnesses', infraction_witnesses_path(infraction) %></td>
+    <td><%= comments_link(infraction) %></td>
+    <td><%= witnesses_link(infraction) %></td>
     <td><%= link_to 'Show', infraction %></td>
     <% if can? :update, infraction %>
       <td><%= link_to 'Edit', edit_infraction_path(infraction) %></td>
