--- a/app/views/infractions/show.html.erb
+++ b/app/views/infractions/show.html.erb
@@ -30,8 +30,7 @@
 </p>
 <% end %>
 
-<%= link_to 'Comments', comments_path %> |
-<%= link_to 'Witnesses', witnesses_path %> |
+<%= comments_link %> | <%= witnesses_link %> |
 <% if can? :update, @infraction %>
   <%= link_to 'Edit', edit_infraction_path(@infraction) %> |
 <% end %>
