--- a/public/stylesheets/green.css
+++ b/public/stylesheets/green.css
@@ -77,3 +77,54 @@
   font-weight: bold;
   cursor: pointer;
 }
+
+#infraction_witnesses {
+  position: absolute;
+  top: 180px;
+  right: 20px;
+  background-color: #CCFF99;
+  width: 300px;
+}
+
+#infraction_witnesses table {
+  margin-left:auto; margin-right:auto;
+}	
+
+#infraction_witnesses table tr td{
+  font-size: 10px;
+}
+
+#infraction_witnesses table tr th{
+  font-weight: bold;
+  font-size: 10px;
+}
+
+
+.sticky_note_container {
+    float: left;
+    width: 500px;
+    margin-right: 10px;
+    margin-left: 40px;
+}
+.sticky_note {
+     width: 500px;
+     min-height: 50px;
+     background-image: url(../images/note_middle.gif);
+     background-repeat: repeat-y;
+     margin: 0px 0px 0px 0px;
+     padding: 10px 0px 0px 0px;
+}
+.sticky_note_content {
+     padding: 10px 5px 0px 20px;
+     font: Comic Sans MS, Cursive, Serif;
+     font-size: 12px;
+}
+
+.sticky_note_footer {
+     width: 500px;
+     background-image: url(../images/note_finish.gif);
+     background-position: 0% 100%;
+     background-repeat: no-repeat;
+     margin: 0px 0px 0px 0px;
+     padding: 0px 0px 0px 0px;
+}
