--- a/app/views/suggestions/show.html.erb
+++ b/app/views/suggestions/show.html.erb
@@ -18,6 +18,7 @@
   <%= @suggestion.description %>
 </p>
 
+<%= comments_link(@suggestion) %> | 
 <% if can? :update, @suggestion %>
   <%= link_to 'Edit', edit_suggestion_path(@suggestion) %> |
 <% end %>
