--- a/app/views/player_mailer/witness_notification.html.erb
+++ b/app/views/player_mailer/witness_notification.html.erb
@@ -3,5 +3,6 @@
 <% if @action == 'added' %>
   <p>Please accept or reject your role as a witness for <%= link_to 'this infraction', @infraction %></p>
 <% else %>
-  <p>You have been removed as a witness from <%= link_to 'this infraction', @infraction %></p>
-<% end %>
+
+
+<%= url_for(:host => "example.com", :controller => "infractions", :action => "show", :id => @infraction.id) %>
