--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -28,7 +28,6 @@
   <%= @team.description %>
 </p>
 
-<p><b>Players:</b></p>
 <%= render 'players/players', {
   :players => (
     (user_signed_in? && current_player.is_admin?) ? @team.players : @team.players.where(:active => true)
@@ -41,3 +40,8 @@
   <% end %>
   <%= link_to 'Back', teams_path %>
 </p>
+
+<div>
+hola
+  <%= render 'teams/team_details' %>
+</div>
