--- a/app/views/witnesses/_witnesses.html.erb
+++ b/app/views/witnesses/_witnesses.html.erb
@@ -1,20 +1,26 @@
-<h5 >Witnesses:</h5>
-<% if @infraction.witnesses.size > 0 %>
-  <table>
-    <tr>
-      <th>Player</th>
-      <th>Status</th>
-    </tr>
-  <% @infraction.witnesses.each do |witness| %>
-    <tr>
-      <td><%= witness.player.full_name %></td>
-      <td><%= witness.status %></td>
-    </tr>
-  <% end %>
-  </table>
-  <br />
-<%end%>
-<% if can?(:create, Witness.new(:infraction => @infraction)) %>
-  <%= link_to 'Add Witness', new_witness_path %>
-<% end %>
-
+<div class = "detail_box">
+<div class="box">
+  <div class="topleft">
+  <div class="topright">
+    <div>
+       <h4>Witnesses:</h4>
+	<% if @infraction.witnesses.size > 0 %>
+	  <% @infraction.witnesses.each do |witness| %>
+	      <%=image_tag(witness.player.avatar.url(:thumb),:style => "height:36px;vertical-align:middle")%>
+	      <%= witness.player.full_name %> (<%= witness.status %>)
+	      <br />
+	  <% end %>
+	<%end%>
+	<% if can?(:create, Witness.new(:infraction => @infraction)) %>
+	  <br />	  
+	  <%= link_to 'Add Witness', new_witness_path %>
+	<% end %>
+    </div>
+  </div>
+  </div>
+  <div class="bottomleft">
+  <div class="bottomright">
+  </div>
+  </div>
+</div>
+</div>
