Issue #25, agregando AJAX para testigos de una infraccion y terminando AJAX para los comentarios

--- a/app/views/comments/_comment_content.erb
+++ b/app/views/comments/_comment_content.erb
@@ -6,4 +6,5 @@
 <% if can?(:destroy, comment) %>
   <%= link_to 'Destroy', comment, :confirm => 'Are you sure?', :method => :delete, :remote => true %>
 <% end %>
-<br/><%= comment.description %>
+<br/><b>(<%= comment.comment_type %>)</b>
+<%= comment.description %>
