--- a/app/views/witnesses/_form.erb
+++ b/app/views/witnesses/_form.erb
@@ -13,7 +13,7 @@
   <% unless action_name == 'edit' %>
   <div class="field">
     <%= f.label :player_id %><br />
-    <%= players_select(:witness) %>
+    <%= players_select(:witness, :player_id, :exclude_team => @witness.infraction.team) %>
   </div>
   <% end %>
   <% if action_name == 'edit' && can?(:update, @witness) %>
