--- a/app/views/suggestions/show.html.erb
+++ b/app/views/suggestions/show.html.erb
@@ -19,6 +19,11 @@
       </p>
 
       <p>
+        <b>Status:</b>
+        <%= @suggestion.status %>
+      </p>
+
+      <p>
         <b>Description:</b>
         <%= @suggestion.description %>
       </p>
