--- a/app/views/teams/_team_details.erb
+++ b/app/views/teams/_team_details.erb
@@ -1,47 +1,20 @@
-<% if (@team.infractions.accepted.size > 0) || (@team.infractions_as_offender.accepted.size > 0) %>
+<% infractions = @team.infractions.accepted %>
+<% infractions_as_offender = @team.infractions_as_offender.accepted %>
+<% if infractions.any? || infractions_as_offender.any? %>
 <div class = "detail_box">
-<% if (@team.infractions.accepted.size > 0) %>
-<div class="box">
-  <div class="topleft">
-  <div class="topright">
-    <div>
-	<h4>Infractions reported by this team:</h4>
-	<% @team.infractions.accepted.each do |infraction| %>    
-		<b>Offender:</b> <%= infraction.offender.name %> (<%= infraction.infraction_type %>)
-		<br/>
-		<b>Description:</b> <%= infraction.description %>
-		<br/><br/>
-	 <% end %>
-    </div>
-  </div>
-  </div>
-  <div class="bottomleft">
-  <div class="bottomright">
-  </div>
-  </div>
-</div>
-<%end%>
+  <% if infractions.any? %>
+    <%= render :partial => 'infractions/list', :locals => {
+      :infractions => infractions, 
+      :type => 'offender', 
+      :title => 'Infractions reported by this team'
+    } %>
+  <% end %>
 
-<% if @team.infractions_as_offender.accepted.size > 0 %>
-<div class="box">
-  <div class="topleft">
-  <div class="topright">
-    <div>
-	<h4>Infractions committed by this team:</h4>
-	<% @team.infractions_as_offender.accepted.each do |infraction| %>    
-		<b>Reporter:</b> <%= infraction.reporter %> (<%= infraction.infraction_type %>)
-		<br/>
-		<b>Description:</b> <%= infraction.description %>
-		<br/><br/>
-	 <% end %>
-    </div>
-  </div>
-  </div>
-  <div class="bottomleft">
-  <div class="bottomright">
-  </div>
-  </div>
-</div>
-</div>
-<%end%>
-<%end%>
+  <% if infractions_as_offender.any? %>
+    <%= render :partial => 'infractions/list', :locals => {
+      :infractions => infractions_as_offender, 
+      :type => 'reporter', 
+      :title => 'Infractions committed by this team'
+    } %>
+  <% end %>
+<% end %>
