--- a/app/views/infractions/_list.html.erb
+++ b/app/views/infractions/_list.html.erb
@@ -13,8 +13,8 @@
             <% if witness %>
               <br />
               <% if pending?(witness) && can?(:update, @player) %>
-                <%= link_to 'Accept', "infractions/#{witness.infraction.id}/witnesses/#{witness.id}/#{Status.find_by_name('Accepted').id}", :confirm => 'You are about to accept your role as a witness for this infraction', :method => :delete, :remote => true, :class => 'witness_button' %> | 
-                <%= link_to 'Reject', "infractions/#{witness.infraction.id}/witnesses/#{witness.id}/#{Status.find_by_name('Rejected').id}", :confirm => 'You are about to reject your role as a witness for this infraction', :method => :delete, :remote=>true, :class => 'witness_button' %>
+                <%= link_to 'Accept', "infractions/#{witness.infraction.id}/witnesses/#{witness.id}/#{Status.accepted.id}", :confirm => 'You are about to accept your role as a witness for this infraction', :method => :delete, :remote => true, :class => 'witness_button' %> | 
+                <%= link_to 'Reject', "infractions/#{witness.infraction.id}/witnesses/#{witness.id}/#{Status.rejected.id}", :confirm => 'You are about to reject your role as a witness for this infraction', :method => :delete, :remote=>true, :class => 'witness_button' %>
               <% else %>
                 <b>Status:</b> <%= witness.status %>
               <% end %>
