--- a/app/views/infractions/_list.html.erb
+++ b/app/views/infractions/_list.html.erb
@@ -1,3 +1,4 @@
+<% witnesses ||= nil %>
   <div class="box">
     <div class="topleft">
     <div class="topright">
@@ -13,8 +14,12 @@
             <% if witness %>
               <br />
               <% if pending?(witness) && can?(:update, @player) %>
-                <%= link_to 'Accept', "infractions/#{witness.infraction.id}/witnesses/#{witness.id}/#{Status.accepted.id}", :confirm => 'You are about to accept your role as a witness for this infraction', :method => :delete, :remote => true, :class => 'witness_button' %> | 
-                <%= link_to 'Reject', "infractions/#{witness.infraction.id}/witnesses/#{witness.id}/#{Status.rejected.id}", :confirm => 'You are about to reject your role as a witness for this infraction', :method => :delete, :remote=>true, :class => 'witness_button' %>
+                <%= link_to 'Accept', accept_infraction_witness_path(infraction, witness), 
+                  :confirm => 'You are about to accept your role as a witness for this infraction', 
+                  :class => 'witness_button' %> | 
+                <%= link_to 'Reject', reject_infraction_witness_path(infraction, witness), 
+                  :confirm => 'You are about to reject your role as a witness for this infraction', 
+                  :class => 'witness_button' %>
               <% else %>
                 <b>Status:</b> <%= witness.status %>
               <% end %>
