Parte del arreglo para el issue #27: no mostrar las infracciones anonimas en la lista de infracciones reportadas por un jugador

--- a/app/views/players/_player_details.html.erb
+++ b/app/views/players/_player_details.html.erb
@@ -12,7 +12,8 @@
     <%= render :partial => 'infractions/list', :locals => {
       :infractions => player_infractions, 
       :type => 'offender', 
-      :title => 'Infractions reported by this player'
+      :title => 'Infractions reported by this player', 
+      :hide_if_anonymous => true
     } %>
   <% end %>
   <div id="test_div"></div>
