--- a/app/views/infractions/_list.html.erb
+++ b/app/views/infractions/_list.html.erb
@@ -7,6 +7,7 @@
         <% infractions.each_index do |index| %>
           <% infraction = infractions[index] %>
           <% witness = witnesses[index] unless witnesses.blank? %>
+          <% unless hide_if_anonymous and infraction.anonymous? and cannot?(:update, infraction) %>
           <p>
             <b><%= type.humanize %>:</b> <%= infraction.send(type) %> (<%= infraction.infraction_type %>)
             <br/>
@@ -25,6 +26,7 @@
               <% end %>
             <% end %>
           </p>
+          <% end %>
         <% end %>
       </div>
     </div>
