--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -5,5 +5,5 @@
 <br />
 
 <% unless user_signed_in? %>
-  <%= link_to 'New Player', new_user_registration_path %>
+  <p><%= link_to 'New Player', new_user_registration_path %></p>
 <% end %>
